--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="papers/paper1.pdf" class="btn">
                             <i class="fas fa-file-pdf"></i> Paper
                         </a>
-                        <a href="https://github.com/yourproject1" class="btn" target="_blank">
+                        <a href="https://github.com/9tchaser/DMSM" class="btn" target="_blank">
                             <i class="fab fa-github"></i> Code
                         </a>
                     </div>
