--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!-- 标题和链接 -->
                 <div class="project-header">
                     <div class="project-links">
-                        <a href="papers/paper1.pdf" class="btn">
+                        <a href="https://arxiv.org/abs/2503.18836" class="btn">
                             <i class="fas fa-file-pdf"></i> Paper
                         </a>
                         <a href="https://github.com/9tchaser/DMSM" class="btn" target="_blank">
